[project]
name = "cryovial"
version = "0.1.0"
description = "Host-resident deploy service for container clusters"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
cryovial = "cryovial.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "interrogate>=1.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
preview = true
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "DOC",   # pydoclint (requires preview)
]
ignore = [
    "D203",  # incompatible with D211 (no-blank-line-before-class preferred)
    "D213",  # incompatible with D212 (multi-line-summary-first-line preferred)
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 80
verbose = 1
